serde-with-extras/tests/snapshots/lift__example_with_extras.snap
---
source: serde-with-extras/tests/lift.rs
expression: data
---
Struct {
    name: "Example",
    len: 2,
    ops: [
        Field {
            key: "basic",
            value: Str(
                "basic",
            ),
        },
        Field {
            key: "with_extras",
            value: X(
                {
                    "comment": "Hello",
                    "comment-after": "Goodbye",
                },
                Str(
                    "with_extras",
                ),
            ),
        },
    ],
}
