serde-with-extras/tests/snapshots/lift__extras_with_extras.snap
---
source: serde-with-extras/tests/lift.rs
expression: data
---
X(
    {
        "comment": "Hello",
        "comment-after": "Goodbye",
    },
    Str(
        "string",
    ),
)
